Add basic HTML structure for Raj Indra Textiles

--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
+Ab<!DOCTYPE html>
+<html>
+<head>
+  <title>Raj Indra Textiles</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
 
+  <h1>Raj Indra Textiles</h1>
+  <p>Manufacturer | Single & Bulk Orders</p>
+
+</body>
+</html>
