Modify addToCart buttons to pass product details
Updated addToCart function calls to include product name and price.

--- a/products.html
+++ b/products.html
@@ -1,35 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Products | Raj Indra Textiles</title>
-  <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-
-  <h1>Our Products</h1>
-
-  <div class="products">
-
-    <div class="product-card">
-      <img src="images/dress1.jpg" alt="Designer Kurti">
-      <h3>Designer Kurti</h3>
-      <p>₹999</p>
-      <button onclick="addToCart()">Add to Cart</button>
-      <a href="https://wa.me/91XXXXXXXXXX?text=I%20want%20Designer%20Kurti" target="_blank">Order on WhatsApp</a>
-    </div>
-
-    <div class="product-card">
-      <img src="images/dress2.jpg" alt="Cotton Fabric">
-      <h3>Cotton Fabric</h3>
-      <p>₹299/meter</p>
-      <button onclick="addToCart()">Add to Cart</button>
-      <a href="https://wa.me/91XXXXXXXXXX?text=I%20want%20Cotton%20Fabric" target="_blank">Order on WhatsApp</a>
-    </div>
-
-  </div>
-
-  <script src="js/cart.js"></script>
-
-</body>
-</html>
+<button onclick="addToCart('Designer Kurti', 999)">Add to Cart</button>
+...
+<button onclick="addToCart('Cotton Fabric', 299)">Add to Cart</button>
